examples/tests/compile_fail/unknown_field_read_fail.zl
struct Point {
    x i32,
    y i32
}

fun main() >> i32 {
    Point p;
    p.x = 1;
    i32 v = p.zzz;
    return v;
}
